# python-array-unfairness

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: ci_poetry.yml  poetry.yml
src/array_unfairness/: main.py
tests/: test_array_unfairness.py
