[tool.poetry]
name = "array-unfairness"
version = "0.1.0"
description = "Array unfairness search test task"
authors = ["MoodyReaper <efrem.sarmazov@gmail.com>"]
readme = "README.md"
packages = [{ include = "array_unfairness", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
